--- a/ui/src/main/res/values-it/strings.xml
+++ b/ui/src/main/res/values-it/strings.xml
@@ -59,9 +59,9 @@
     <string name="add_peer">Aggiungi peer</string>
     <string name="addresses">Indirizzi</string>
     <string name="applications">Applicazioni</string>
-    <string name="allow_remote_control_intents_summary_off">Le applicazioni esterne non possono attivare tunnel (consigliato)</string>
-    <string name="allow_remote_control_intents_summary_on">Le applicazioni esterne possono attivare tunnel (avanzato)</string>
-    <string name="allow_remote_control_intents_title">Consenti applicazioni di controllo remoto</string>
+    <string name="allow_remote_control_intents_summary_off">Le app esterne non possono attivare tunnel (consigliato)</string>
+    <string name="allow_remote_control_intents_summary_on">Le app esterne possono attivare tunnel (avanzato)</string>
+    <string name="allow_remote_control_intents_title">Consenti app di controllo remoto</string>
     <string name="allowed_ips">IP consentiti</string>
     <string name="bad_config_context">%2$s di %1$s</string>
     <string name="bad_config_context_top_level">%s</string>
@@ -94,7 +94,7 @@
     <string name="create_downloads_file_error">Impossibile creare il file nella cartella di download</string>
     <string name="create_empty">Crea da zero</string>
     <string name="create_from_file">Importa da file o archivio</string>
-    <string name="create_from_qr_code">Scansione da codice QR</string>
+    <string name="create_from_qr_code">Scansiona da codice QR</string>
     <string name="create_output_dir_error">Impossibile creare la cartella di output</string>
     <string name="create_temp_dir_error">Impossibile creare la cartella locale temporanea</string>
     <string name="create_tunnel">Crea tunnel</string>
@@ -107,6 +107,9 @@
     <string name="tv_select_a_storage_drive">Seleziona un\'unità di archiviazione</string>
     <string name="tv_no_file_picker">Installa un\'utilità di gestione file per sfogliare i file</string>
     <string name="tv_add_tunnel_get_started">Aggiungi un tunnel per iniziare</string>
+    <string name="donate_title">♥ Dona al progetto WireGuard</string>
+    <string name="donate_summary">Ogni contributo aiuta</string>
+    <string name="donate_google_play_disappointment">Grazie per il sostegno al progetto WireGuard!\n\nPurtroppo, a causa delle politiche di Google, non siamo autorizzati a linkare la pagina del progetto dove puoi fare una donazione. Speriamo che la troverai!\n\nGrazie ancora per il tuo contributo.</string>
     <string name="disable_config_export_title">Disattiva esportazione config</string>
     <string name="disable_config_export_description">Disabilitare l\'esportazione della configurazione rende le chiavi private meno accessibili</string>
     <string name="dns_servers">Server DNS</string>
@@ -116,13 +119,14 @@
     <string name="error_down">Errore di disattivazione del tunnel: %s</string>
     <string name="error_fetching_apps">Errore di recupero dell\'elenco applicazioni: %s</string>
     <string name="error_root">Accedi come root e riprova</string>
+    <string name="error_prepare">Errore di preparazione del tunnel: %s</string>
     <string name="error_up">Errore di attivazione del tunnel: %s</string>
     <string name="exclude_private_ips">Escludi IP privati</string>
     <string name="generate_new_private_key">Genera nuova chiave privata</string>
     <string name="generic_error">Errore “%s” sconosciuto</string>
     <string name="hint_automatic">(auto)</string>
-    <string name="hint_generated">(generato)</string>
-    <string name="hint_optional">(facoltativo)</string>
+    <string name="hint_generated">(generata)</string>
+    <string name="hint_optional">(facoltativa)</string>
     <string name="hint_optional_discouraged">(facoltativo, non consigliato)</string>
     <string name="hint_random">(casuale)</string>
     <string name="illegal_filename_error">Nome file “%s” non valido</string>
@@ -135,6 +139,8 @@
     <string name="key_length_explanation_base64">: le chiavi base64 di WireGuard devono essere di 44 caratteri (32 byte)</string>
     <string name="key_length_explanation_binary">: le chiavi di WireGuard devono essere di 32 byte</string>
     <string name="key_length_explanation_hex">: le chiavi esadecimali di WireGuard devono essere di 64 caratteri (32 byte)</string>
+    <string name="latest_handshake">Ultima negoziazione</string>
+    <string name="latest_handshake_ago">%s fa</string>
     <string name="listen_port">Porta in ascolto</string>
     <string name="log_export_error">Impossibile esportare il log: %s</string>
     <string name="log_export_subject">File di log WireGuard Android</string>
@@ -178,6 +184,10 @@
     <string name="private_key">Chiave privata</string>
     <string name="public_key">Chiave pubblica</string>
     <string name="qr_code_hint">Suggerimento: genera con `qrencode -t ansiutf8 &lt; tunnel.conf`.</string>
+    <string name="quick_settings_tile_add_title">Aggiungi riquadro ale impostazioni rapide</string>
+    <string name="quick_settings_tile_add_summary">La scorciatoia attiva/disattiva il tunnel più recente</string>
+    <string name="quick_settings_tile_add_failure">Impossibile aggiungere la scorciatoia: errore %d</string>
+    <string name="quick_settings_tile_action">Attiva/disattiva tunnel</string>
     <string name="restore_on_boot_summary_off">Non attiverà i tunnel configurati all\'avvio</string>
     <string name="restore_on_boot_summary_on">Attiverà i tunnel configurati all\'avvio</string>
     <string name="restore_on_boot_title">Ripristina all\'avvio</string>
@@ -213,6 +223,7 @@
     <string name="tunnel_create_success">Tunnel “%s” creato correttamente</string>
     <string name="tunnel_error_already_exists">Il tunnel “%s” esiste già</string>
     <string name="tunnel_error_invalid_name">Nome non valido</string>
+    <string name="tunnel_list_placeholder">Aggiungi un tunnel usando il pulsante sotto</string>
     <string name="tunnel_name">Nome tunnel</string>
     <string name="tunnel_on_error">Impossibile attivare il tunnel (wgTurnOn ha risposto %d)</string>
     <string name="tunnel_dns_failure">Impossibile risolve il nome di domino: \"%s\"</string>
@@ -221,6 +232,16 @@
     <string name="type_name_go_userspace">Spazio utente Go</string>
     <string name="type_name_kernel_module">Modulo kernel</string>
     <string name="unknown_error">Errore sconosciuto</string>
+    <string name="updater_avalable">È disponibile un aggiornamento dell\'app. Si prega di aggiornare ora.</string>
+    <string name="updater_action">Scarica e aggiorna</string>
+    <string name="updater_rechecking">Recupero metadati aggiornamento…</string>
+    <string name="updater_download_progress">Scaricamento aggiornamento: %1$s / %2$s (%3$.2f%%)</string>
+    <string name="updater_download_progress_nototal">Scaricamento aggiornamento: %s</string>
+    <string name="updater_installing">Installazione aggiornamento…</string>
+    <string name="updater_failure">Aggiornamento fallito: %s. Riprovo momentaneamente…</string>
+    <string name="updater_corrupt_title">Applicazione danneggiata</string>
+    <string name="updater_corrupt_message">Questa applicazione è danneggiata. Riscarica l\'APK dal sito collegato qui sotto. Dopo, disinstalla questa applicazione e reinstallala dall\'APK scaricato.</string>
+    <string name="updater_corrupt_navigate">Apri sito web</string>
     <string name="version_summary">Backend %1$s %2$s</string>
     <string name="version_summary_checking">Controllo versione backend %s</string>
     <string name="version_summary_unknown">Versione %s sconosciuta</string>
