--- a/ui/src/main/res/values-sk-rSK/strings.xml
+++ b/ui/src/main/res/values-sk-rSK/strings.xml
@@ -8,7 +8,7 @@
     <string name="addresses">Adresy</string>
     <string name="applications">Aplikácie</string>
     <string name="allow_remote_control_intents_summary_off">Externé aplikácie nemôžu spustiť tunely (odporúčané)</string>
-    <string name="allow_remote_control_intents_summary_on">Externé aplikácie môžu spustiť tunely (odporúčané)</string>
+    <string name="allow_remote_control_intents_summary_on">Externé aplikácie môžu spustiť tunely (pokročilé)</string>
     <string name="allow_remote_control_intents_title">Povoliť aplikáciám vzdialenú správu</string>
     <string name="allowed_ips">Povolené IP adresy</string>
     <string name="bad_config_context_top_level">%s</string>
@@ -20,8 +20,8 @@
     <string name="bad_config_reason_invalid_number">Neplatné číslo</string>
     <string name="bad_config_reason_invalid_value">Neplatná hodnota</string>
     <string name="bad_config_reason_missing_attribute">Chýbajúci atribút</string>
-    <string name="bad_config_reason_missing_section">Chýbajúc sekcia</string>
-    <string name="bad_config_reason_syntax_error">Chyba syntaxu</string>
+    <string name="bad_config_reason_missing_section">Chýbajúca sekcia</string>
+    <string name="bad_config_reason_syntax_error">Chyba syntaxe</string>
     <string name="bad_config_reason_unknown_attribute">Neznámy atribút</string>
     <string name="bad_config_reason_unknown_section">Neznáma sekcia</string>
     <string name="bad_config_reason_value_out_of_range">Hodnota mimo povoleného rozsahu</string>
@@ -31,12 +31,12 @@
     <string name="config_exists_error">Konfigurácia pre “%s” už existuje</string>
     <string name="config_file_exists_error">Konfiguračný súbor pre “%s” už existuje</string>
     <string name="config_not_found_error">Konfiguračný súbor “%s” sa nenašiel</string>
-    <string name="config_rename_error">Nemôžete premenovať konfiguračný súbor “%s”</string>
-    <string name="config_save_error">Nemôžete uložiť konfiguráciu pre “%1$s”: %2$s</string>
+    <string name="config_rename_error">Nepodarilo sa premenovať konfiguračný súbor “%s”</string>
+    <string name="config_save_error">Nepodarilo sa uložiť konfiguráciu pre “%1$s”: %2$s</string>
     <string name="config_save_success">Úspešne sa podarilo uložiť konfiguráciu pre “%s”</string>
     <string name="create_activity_title">Vytvoriť WireGuard tunel</string>
-    <string name="create_bin_dir_error">Nemôžete vytvoriť lokálny binárny súbor</string>
-    <string name="create_downloads_file_error">Nemôžete vytvoriť súbor v priečinku downloads</string>
+    <string name="create_bin_dir_error">Nepodarilo sa vytvoriť lokálny priečinok pre binárne súbory</string>
+    <string name="create_downloads_file_error">Nepodarilo sa vytvoriť súbor v priečinku stiahnuté</string>
     <string name="create_empty">Vytvoriť od počiatku</string>
     <string name="create_from_file">Importovať zo súboru alebo archívu</string>
     <string name="create_from_qr_code">Skenovať z QR kódu</string>
@@ -50,10 +50,10 @@
     <string name="delete">Odstrániť</string>
     <string name="tv_delete">Vyberte tunel na odstránenie</string>
     <string name="tv_select_a_storage_drive">Vyberte úložnú jednotku</string>
-    <string name="tv_no_file_picker">Prosím nainštalujte manažéra súbor aby ste mohli prehliadať súbory</string>
+    <string name="tv_no_file_picker">Prosím nainštalujte manažéra súborov aby ste mohli prehliadať súbory</string>
     <string name="tv_add_tunnel_get_started">Pridajte tunel aby ste mohli začať</string>
     <string name="disable_config_export_title">Zakázať export konfigurácie</string>
-    <string name="disable_config_export_description">Zakázanie exportu konfigurácii spôsobí, že prístup k súkromným kľúčom sa stáva zložitým</string>
+    <string name="disable_config_export_description">Zakázanie exportu konfigurácie spôsobí, že prístup k súkromným kľúčom sa stáva zložitým</string>
     <string name="dns_servers">Servery DNS</string>
     <string name="dns_search_domains">Prehľadávať domény</string>
     <string name="edit">Upraviť</string>
@@ -61,46 +61,46 @@
     <string name="error_down">Chyba pri vypínaní tunela: %s</string>
     <string name="error_fetching_apps">Chyba pri načítaní zoznamu aplikácií: %s</string>
     <string name="error_root">Získajte prístup root a skúste znova</string>
-    <string name="error_up">Chyba pri vyvolávaní tunela: %s</string>
-    <string name="exclude_private_ips">Vynechať privátne IP</string>
-    <string name="generate_new_private_key">Generovať nový privátny kľúč</string>
+    <string name="error_up">Chyba pri zapínaní tunela: %s</string>
+    <string name="exclude_private_ips">Vynechať súkromné IP</string>
+    <string name="generate_new_private_key">Generovať nový súkromný kľúč</string>
     <string name="generic_error">Neznáma “%s” chyba</string>
     <string name="hint_automatic">(automatické)</string>
     <string name="hint_generated">(generované)</string>
     <string name="hint_optional">(voliteľné)</string>
     <string name="hint_optional_discouraged">(voliteľné, neodporúča sa)</string>
     <string name="hint_random">(náhodné)</string>
-    <string name="illegal_filename_error">Ilegálne meno súboru “%s”</string>
+    <string name="illegal_filename_error">Nepovolené meno súboru “%s”</string>
     <string name="import_error">Nepodarilo sa importovať tunel: %s</string>
     <string name="import_from_qr_code">Importovať tunel z QR kódu</string>
     <string name="import_success">Podarilo sa importovať “%s”</string>
     <string name="interface_title">Rozhranie</string>
-    <string name="key_contents_error">Nepovolené charaktery v kľúči</string>
+    <string name="key_contents_error">Nepovolené znaky v kľúči</string>
     <string name="key_length_error">Nesprávna dĺžka kľúču</string>
-    <string name="key_length_explanation_base64">: WireGuard base64 kľúče musia mať 44 charakterov (32 bytes)</string>
+    <string name="key_length_explanation_base64">: WireGuard base64 kľúče musia mať 44 znakov (32 bytes)</string>
     <string name="key_length_explanation_binary">: WireGuard kľúče musia byť 32 bytové</string>
-    <string name="key_length_explanation_hex">: WireGuard hex kľúče musia mať 64 charakterov (32 bytes)</string>
+    <string name="key_length_explanation_hex">: WireGuard hex kľúče musia mať 64 znakov (32 bytes)</string>
     <string name="listen_port">Otvorený port</string>
     <string name="log_export_error">Nepodarilo sa exportovať log: %s</string>
-    <string name="log_export_subject">WireGuard Android Záznam</string>
+    <string name="log_export_subject">WireGuard Android Denník udalostí</string>
     <string name="log_export_success">Uložené do “%s”</string>
     <string name="log_export_title">Exportovať denník udalostí</string>
     <string name="log_saver_activity_label">Uložiť denník udalostí</string>
-    <string name="log_viewer_pref_summary">Denník udalosti môžu byt nápomocné pri ladení aplikácie</string>
+    <string name="log_viewer_pref_summary">Denníky udalostí môžu byt nápomocné pri ladení aplikácie</string>
     <string name="log_viewer_pref_title">Zobraziť denník udalostí aplikácie</string>
     <string name="log_viewer_title">Denník udalostí</string>
-    <string name="logcat_error">Nepodarilo sa prehrať logcat: </string>
-    <string name="module_enabler_enabled_summary">Pomalšie užívatelské prostredie môže zlepšiť stabilitu</string>
+    <string name="logcat_error">Nepodarilo sa spustiť logcat: </string>
+    <string name="module_enabler_enabled_summary">Pomalší userspace backend môže zlepšiť stabilitu</string>
     <string name="module_installer_error">Niečo sa pokazilo. Prosím, skúste znova</string>
     <string name="module_installer_not_found">Pre vaše zariadenie nie sú k dispozícii žiadne moduly</string>
-    <string name="module_installer_title">Stiahni a nainštaluj kernel modul</string>
-    <string name="module_installer_working">Sťahuje a inštalujem…</string>
+    <string name="module_installer_title">Stiahnutie a inštalácia kernelového modulu</string>
+    <string name="module_installer_working">Sťahuje sa a inštaluje sa…</string>
     <string name="mtu">Maximálna prenosová jednotka</string>
     <string name="multiple_tunnels_summary_off">Zapnutím jedného tunela vypnete ostatné</string>
-    <string name="multiple_tunnels_summary_on">Môžu byť zapnuté viaceré tunele naraz</string>
-    <string name="multiple_tunnels_title">Povoliť niekoľko tunel naraz</string>
+    <string name="multiple_tunnels_summary_on">Môžu byť zapnuté viaceré tunely naraz</string>
+    <string name="multiple_tunnels_title">Povoliť viacero tunelov naraz</string>
     <string name="name">Názov</string>
-    <string name="no_config_error">Pokúšam sa vyvolať tunel bez konfigurácie</string>
+    <string name="no_config_error">Pokúšam sa zapnúť tunel bez konfigurácie</string>
     <string name="no_configs_error">Nenašli sa žiadne konfigurácie</string>
     <string name="no_tunnels_error">Neexistujú žiadne tunely</string>
     <string name="parse_error_generic">reťazec</string>
@@ -108,7 +108,7 @@
     <string name="parse_error_inet_endpoint">koncový bod</string>
     <string name="parse_error_inet_network">IP sieť</string>
     <string name="parse_error_integer">číslo</string>
-    <string name="parse_error_reason">Nedá sa rozobrať %1$s “%2$s”</string>
+    <string name="parse_error_reason">Nedá sa parsovať %1$s “%2$s”</string>
     <string name="pre_shared_key">Vopred zdieľaný kľúč</string>
     <string name="pre_shared_key_enabled">povolené</string>
     <string name="private_key">Súkromný kľúč</string>
@@ -121,10 +121,10 @@
     <string name="toggle_all">Prepnúť všetko</string>
     <string name="tools_installer_already">wg a wg-quick už sú nainštalované</string>
     <string name="tools_installer_initial">Nainštalovať voliteľné nástroje pre skriptovanie</string>
-    <string name="tools_installer_initial_magisk">Nainštalovať voliteľné nástroje pre skriptovanie ako Magisk module</string>
+    <string name="tools_installer_initial_magisk">Nainštalovať voliteľné nástroje pre skriptovanie ako Magisk modul</string>
     <string name="tools_installer_success_magisk">wg a wg-quick sú nainštalované ako Magisk modul (reštart požadovaný)</string>
     <string name="tools_installer_title">Inštalácia nástrojov príkazového riadku</string>
-    <string name="tools_installer_working">Inštalácia wg a wg-quick</string>
+    <string name="tools_installer_working">Inštaluje sa wg a wg-quick</string>
     <string name="tools_unavailable_error">Potrebné nástroje nie sú k dispozícii</string>
     <string name="transfer">Prenos</string>
     <string name="transfer_bytes">%d B</string>
@@ -141,7 +141,7 @@
     <string name="tunnel_name">Meno tunelu</string>
     <string name="tunnel_rename_error">Nepodarilo sa premenovať tunel: %s</string>
     <string name="tunnel_rename_success">Úspešne premenovaný tunel na “%s”</string>
-    <string name="type_name_kernel_module">Modul jadra</string>
+    <string name="type_name_kernel_module">Kernelový modul</string>
     <string name="unknown_error">Neznáma chyba</string>
     <string name="version_summary_unknown">Neznáma %s verzia</string>
     <string name="version_title">WireGuard pre Android v%s</string>
@@ -149,10 +149,10 @@
     <string name="vpn_start_error">Nepodarilo sa spustiť Android VPN službu</string>
     <string name="zip_export_error">Nepodarilo sa exportovať tunely: %s</string>
     <string name="zip_export_success">Uložené ako “%s”</string>
-    <string name="zip_export_summary">Zip súbor bude uložený do priečinka na sťahovanie</string>
+    <string name="zip_export_summary">Zip súbor bude uložený do priečinka stiahnuté</string>
     <string name="zip_export_title">Export tunelov do zip súboru</string>
     <string name="biometric_prompt_zip_exporter_title">Overovanie pre export tunelov</string>
-    <string name="biometric_prompt_private_key_title">Overovanie pre zobrazenie privátneho kľúča</string>
+    <string name="biometric_prompt_private_key_title">Authenticate to view private key</string>
     <string name="biometric_auth_error">Overovanie zlyhalo</string>
     <string name="biometric_auth_error_reason">Overovanie zlyhalo: %s</string>
 </resources>
